syntax = "proto3";

package paxoskv;
option go_package = "github.com/paxoskv;paxoskv";

message BallotNum {
  int64 N = 1;
  int64 ProposerId = 2;
}

message Value {
  int64 Vi64 = 1;
}

message PaxosInstanceID {
  string Key = 1;
  int64 Ver = 2;
}

message PrepareReq {
  PaxosInstanceID ID = 1;
  BallotNum Bal = 2;
}

message PrepareResp {
  BallotNum LastBal = 1;
  Value Val = 2;
  BallotNum VBal = 3;
}

message AcceptReq {
  PaxosInstanceID ID = 1;
  BallotNum Bal = 2;
  Value Val = 3;
}

message AcceptResp {
  bool OK = 1;
  BallotNum LastBal = 2;
}

service PaxosKV {
  rpc Prepare (PrepareReq) returns (PrepareResp) {}
  rpc Accept (AcceptReq) returns (AcceptResp) {}
}